Added wall and object storage and displacement input keys

--- a/src/assignment_one.vcxproj
+++ b/src/assignment_one.vcxproj
@@ -164,7 +164,7 @@
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Basic.shader" />
+    <None Include="vertex_fragment.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
