--- a/src/assignment_one.vcxproj
+++ b/src/assignment_one.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Axes.shader" />
     <None Include="Basic.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
