--- a/src/assignment_one.vcxproj.filters
+++ b/src/assignment_one.vcxproj.filters
@@ -85,5 +85,8 @@
     <None Include="Basic.shader">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Axes.shader">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
