--- a/src/assignment_one.vcxproj
+++ b/src/assignment_one.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="axes.shader" />
     <None Include="vertex_fragment.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
