--- a/src/assignment_one.vcxproj.filters
+++ b/src/assignment_one.vcxproj.filters
@@ -67,5 +67,8 @@
     <None Include="axes.shader">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="lightingSource.shader">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
