--- a/src/assignment_one.vcxproj.filters
+++ b/src/assignment_one.vcxproj.filters
@@ -76,5 +76,8 @@
     <None Include="lightingSource.shader">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="depthMap.shader">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
