refactor: extra depthMapper to its own file

--- a/src/assignment_one.vcxproj
+++ b/src/assignment_one.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DepthMapper.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Constants.h" />
